--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "gatsby-transformer-remark": "^2.3.0",
     "netlify-cms": "^2.5.1",
     "react": "^16.8.3",
-    "react-dom": "^16.8.3"
+    "react-dom": "^16.8.3",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.85.0"
   },
   "devDependencies": {
     "prettier": "^1.16.4"
