--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-plugin-sass": "^2.0.10",
     "gatsby-source-filesystem": "^2.0.23",
     "gatsby-transformer-remark": "^2.3.0",
+    "moment": "^2.24.0",
     "netlify-cms": "^2.5.1",
     "node-sass": "^4.11.0",
     "react": "^16.8.3",
