--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -12,7 +12,7 @@ collections:
     label: Blog
     folder: blog
     create: true
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+    slug: "blog/{{slug}}"
     fields:
       - { name: date, label: Date, widget: date }
       - { name: title, label: Title }
