--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -12,8 +12,8 @@ collections:
     label: Blog
     folder: blog
     create: true
-    slug: "{{slug}}"
-    preview_path: "blog/{{slug}}"
+    slug: {{slug}}
+    preview_path: blog/{{slug}}
     fields:
       - { name: date, label: Date, widget: date }
       - { name: title, label: Title }
