--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "gatsby": "^2.1.19",
     "gatsby-plugin-netlify-cms": "^3.0.12",
+    "gatsby-plugin-netlify-cms-paths": "^1.2.1",
     "gatsby-plugin-sass": "^2.0.10",
     "gatsby-plugin-sharp": "^2.0.25",
     "gatsby-plugin-slug": "^1.0.1",
