--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -14,6 +14,9 @@ collections:
     create: true
     slug: "{{slug}}"
     fields:
-      - { name: date, label: Date, widget: date }
       - { name: title, label: Title }
+      - { name: date, label: Date, widget: date }
+      - { name: author, label: Author }
+      - { name: thumbnail, label: Thumbnail, widget: image }
+      - { name: tags, label: Tags(séparer par une virgule et un espace), widget: list }
       - { name: body, label: Body, widget: markdown }
