--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -10,7 +10,7 @@ publish_mode: editorial_workflow
 collections:
   - name: blog
     label: Blog
-    folder: /src/pages/blog
+    folder: src/pages/blog
     create: true
     slug: "{{slug}}"
     fields:
