--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "gatsby-plugin-sharp": "^2.0.25",
     "gatsby-plugin-slug": "^1.0.1",
     "gatsby-remark-copy-linked-files": "^2.0.9",
+    "gatsby-remark-emoji": "^0.0.2",
+    "gatsby-remark-emojis": "^0.3.1",
     "gatsby-remark-images": "^3.0.6",
     "gatsby-remark-relative-images": "^0.2.2",
     "gatsby-source-filesystem": "^2.0.23",
