--- a/package.json
+++ b/package.json
@@ -21,16 +21,17 @@
     "gatsby-plugin-sharp": "^2.0.25",
     "gatsby-plugin-slug": "^1.0.1",
     "gatsby-remark-copy-linked-files": "^2.0.9",
-    "gatsby-remark-emoji": "^0.0.2",
-    "gatsby-remark-emojis": "^0.3.1",
+    "gatsby-remark-emoji": "0.0.2",
     "gatsby-remark-images": "^3.0.6",
+    "gatsby-remark-prismjs": "^3.2.4",
     "gatsby-remark-relative-images": "^0.2.2",
     "gatsby-source-filesystem": "^2.0.23",
-    "gatsby-transformer-remark": "^2.3.0",
+    "gatsby-transformer-remark": "^2.3.1",
     "gatsby-transformer-sharp": "^2.1.15",
     "moment": "^2.24.0",
     "netlify-cms": "^2.5.1",
     "node-sass": "^4.11.0",
+    "prismjs": "^1.15.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-helmet": "^5.2.0",
