--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -12,7 +12,11 @@ collections:
     label: Blog
     folder: src/pages/blog
     create: true
-    slug: "{{slug}}"
+    slug:
+      encoding: "ascii"
+      clean_accents: true
+      sanitize_replacement: "-"
+    show_preview_links: true
     preview_path: "blog/{{slug}}"
     fields:
       - { name: title, label: Title }
