--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -12,10 +12,10 @@ collections:
     label: Blog
     folder: src/pages/blog
     create: true
-    slug:
-      encoding: "ascii"
-      clean_accents: true
-      sanitize_replacement: "-"
+    slug: "{{slug}}"
+      # encoding: "ascii"
+      # clean_accents: true
+      # sanitize_replacement: "-"
     show_preview_links: true
     preview_path: "blog/{{slug}}"
     fields:
