--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -13,9 +13,9 @@ collections:
     folder: src/pages/blog
     create: true
     slug: "{{slug}}"
-      # encoding: "ascii"
-      # clean_accents: true
-      # sanitize_replacement: "-"
+      encoding: "ascii"
+      clean_accents: true
+      sanitize_replacement: "-"
     show_preview_links: true
     preview_path: "blog/{{slug}}"
     fields:
