--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -7,6 +7,8 @@ public_folder: /assets
 
 publish_mode: editorial_workflow
 
+logo_url: https://www.commit42.com/assets/logo.png
+
 slug:
   encoding: "ascii"
   clean_accents: true
