--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -9,6 +9,8 @@ publish_mode: editorial_workflow
 
 logo_url: https://www.commit42.com/assets/logo.png
 
+site_url: https://your-site.com
+
 slug:
   encoding: "ascii"
   clean_accents: true
