--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -9,7 +9,7 @@ publish_mode: editorial_workflow
 
 logo_url: https://www.commit42.com/assets/logo.png
 
-site_url: https://your-site.com
+site_url: https://www.commit42.com
 
 slug:
   encoding: "ascii"
