--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "gatsby": "^2.1.19",
+    "gatsby-plugin-less": "^2.0.12",
     "gatsby-plugin-netlify-cms": "^3.0.12",
     "gatsby-plugin-netlify-cms-paths": "^1.2.1",
     "gatsby-plugin-react-helmet": "^3.0.8",
@@ -28,6 +29,7 @@
     "gatsby-source-filesystem": "^2.0.23",
     "gatsby-transformer-remark": "^2.3.1",
     "gatsby-transformer-sharp": "^2.1.15",
+    "less": "^3.9.0",
     "moment": "^2.24.0",
     "netlify-cms": "^2.5.1",
     "node-sass": "^4.11.0",
@@ -36,6 +38,7 @@
     "react-dom": "^16.8.3",
     "react-helmet": "^5.2.0",
     "semantic-ui-css": "^2.4.1",
+    "semantic-ui-less": "^2.4.1",
     "semantic-ui-react": "^0.85.0"
   },
   "devDependencies": {
