--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "prismjs": "^1.15.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-headroom": "^2.2.8",
     "react-helmet": "^5.2.0",
     "react-icons": "^3.5.0",
     "react-reveal": "^1.2.2",
