--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "gatsby": "^2.1.19",
+    "gatsby-image": "^2.0.35",
     "gatsby-plugin-less": "^2.0.12",
     "gatsby-plugin-netlify-cms": "^3.0.12",
     "gatsby-plugin-netlify-cms-paths": "^1.2.1",
