--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -18,7 +18,7 @@ slug:
 
 collections:
   - name: blog
-    label: Blog
+    label: Post
     folder: src/pages/blog
     create: true
     slug: "{{slug}}"
@@ -34,3 +34,9 @@ collections:
           widget: list,
         }
       - { name: body, label: Body, widget: markdown }
+  - name: pages
+    label: Pages
+    folder: src/pages/markdownPages
+    create: true
+    fields:
+      - { name: title, label: Title, widget: string }
