--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -36,7 +36,7 @@ collections:
       - { name: body, label: Body, widget: markdown }
   - name: pages
     label: Pages
-    folder: src/pages/markdownPages
+    folder: src/pages/content
     create: true
     fields:
       - { name: title, label: Title, widget: string }
