--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -3,7 +3,7 @@ backend:
   repo: commit42/new-site-c42
 
 media_folder: static/assets
-public_folder: /assets
+public_folder: assets
 
 publish_mode: editorial_workflow
 
@@ -18,7 +18,7 @@ slug:
 
 collections:
   - name: blog
-    label: Blog
+    label: Post
     folder: src/pages/blog
     create: true
     slug: "{{slug}}"
@@ -28,5 +28,134 @@ collections:
       - { name: date, label: Date, widget: date }
       - { name: author, label: Author }
       - { name: thumbnail, label: Thumbnail, widget: image }
-      - { name: tags, label: Tags(séparer par une virgule et un espace), widget: list }
+      - {
+          name: tags,
+          label: Tags(séparer par une virgule et un espace),
+          widget: list,
+        }
       - { name: body, label: Body, widget: markdown }
+
+  - name: pages
+    label: Page
+    folder: src/pages/content
+    create: true
+    files:
+      - file: src/pages/content/index.md
+        label: Landing Page
+        name: index
+        fields:
+          - {
+              name: header,
+              label: Header,
+              widget: object,
+              fields:
+                [
+                  { name: heading, label: Heading, widget: string },
+                  { name: description, label: Description, widget: text },
+                ],
+            }
+          - {
+              name: services,
+              label: Services,
+              widget: object,
+              fields:
+                [
+                  {
+                    name: service1, 
+                    label: Service1, 
+                    widget: object, 
+                    fields: 
+                      [
+                        { name: title, label: Title, widhet: string },
+                        { name: description, label: Description, widget: text },
+                      ]
+                  },
+                  {
+                    name: service2, 
+                    label: Service2, 
+                    widget: object, 
+                    fields: 
+                      [
+                        { name: title, label: Title, widhet: string },
+                        { name: description, label: Description, widget: text },
+                      ]
+                  },
+                  {
+                    name: service3, 
+                    label: Service3, 
+                    widget: object, 
+                    fields: 
+                      [
+                        { name: title, label: Title, widhet: string },
+                        { name: description, label: Description, widget: text },
+                      ]
+                  }
+                  
+                ],
+            }
+          - {
+              name: pitch,
+              label: Pitch,
+              widget: object,
+              fields: 
+                [
+                  { 
+                    name: section1, 
+                    label: Section1, 
+                    widget: object, 
+                    fields: 
+                      [
+                        { name: title, label: Title , widget: string }, 
+                        { name: description, label: Description, widget: text }, 
+                        { name: image ,label: Image , widget: image } 
+                      ]
+                  },
+                  { 
+                    name: section2, 
+                    label: Section2, 
+                    widget: object, 
+                    fields: 
+                      [
+                        {name: title, label: Title , widget: string }, 
+                        {name: description, label: Description, widget: text }, 
+                        {name: image ,label: Image , widget: image } 
+                      ]
+                  },
+                  { 
+                    name: section3, 
+                    label: Section3, 
+                    widget: object, 
+                    fields: 
+                      [
+                        { name: title, label: Title , widget: string }, 
+                        { name: description, label: Description, widget: text }, 
+                        { name: image ,label: Image , widget: image } 
+                      ]
+                  } 
+                ]
+            }
+          - {
+            name: testimonials, 
+            label: Testimonials, 
+            widget: object, 
+            fields: 
+              [
+                {name: heading, label: Heading, widget: string},
+                {
+                  name: testimonialsCards, 
+                  label: TestimonialsCards, 
+                  widget: object, 
+                  fields: [
+                    {
+                      name: testimonial1, 
+                      label: Testimonial1, 
+                      widget: object: 
+                        {name: text: Text: widget: text}, 
+                        {name: author, label: Author, widget: string}, 
+                        {name: rating, label: Rating, widget: number}
+                    }
+                  ]
+                }
+              ]
+            }
+          
