--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -150,9 +150,12 @@ collections:
                           name: testimonial1,
                           label: Testimonial1,
                           widget: object,
-                          { name: text, label: Text, widget: text },
-                          { name: author, label: Author, widget: string },
-                          { name: rating, label: Rating, widget: number },
+                          fields:
+                            [
+                              { name: text, label: Text, widget: text },
+                              { name: author, label: Author, widget: string },
+                              { name: rating, label: Rating, widget: number },
+                            ],
                         },
                       ],
                   },
