--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -39,6 +39,10 @@ collections:
     label: Page
     folder: src/pages/content
     create: true
-    fields:
-      - { name: header, label: Header, widget: string }
-      - { name: description, label: Description, widget: text }
+    files:
+      - file: src/pages/content/index.md
+        label: Landing Page
+        name: index
+        fields:
+          - { name: header, label: Header, widget: string }
+          - { name: description, label: Description, widget: text }
