--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -83,6 +83,26 @@ collections:
                   { name: image, label: Image, widget: image },
                 ],
             }
+          - {
+              name: testimonials,
+              label: Testimonials,
+              widget: object,
+              fields:
+                [
+                  { name: heading, label: Heading, widget: string },
+                  {
+                    name: testimonialsList,
+                    label: Testimonials List,
+                    widget: list,
+                    fields:
+                      [
+                        { name: text, label: Text, widget: text },
+                        { name: author, label: Author, widget: string },
+                        { name: rating, label: rating, widget: number },
+                      ],
+                  },
+                ],
+            }
       - file: src/pages/content/blog.md
         label: Blog Page
         name: Blog
