--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -42,6 +42,7 @@ collections:
         label: Landing Page
         name: index
         fields:
+          - { name: pageName, label: Page Name, widget: string }
           - {
               name: header,
               label: Header,
