--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -69,6 +69,7 @@ collections:
                       [
                         { name: title, label: Title, widget: string },
                         { name: description, label: Description, widget: text },
+                        { name: icon, label: Icon Name, widget: string },
                       ],
                   },
                 ],
