--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -109,5 +109,6 @@ collections:
         label: Blog Page
         name: Blog
         fields:
+          - { name: pageName, label: Page Name, widget: string }
           - { name: header, label: Header, widget: string }
           - { name: description, label: Description, widget: text }
