--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -83,6 +83,8 @@ collections:
                   { name: title, label: Title, widget: string },
                   { name: description, label: Description, widget: text },
                   { name: image, label: Image, widget: image },
+                  { name: darkBg, label: Dark Background, widget: boolean, default: false }
+
                 ],
             }
           - {
@@ -113,4 +115,3 @@ collections:
           - { name: header, label: Header, widget: string }
           - { name: description, label: Description, widget: text }
           - { name: image, label: Image, widget: image }
-          - { name: darkBG, label: Dark Background, widget: boolean, default: false }
