--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -82,8 +82,7 @@ collections:
                 [
                   { name: title, label: Title, widget: string },
                   { name: description, label: Description, widget: text },
-                  { name: image, label: Image, widget: image },
-                  { name: darkBg, label: Dark Background, widget: boolean, default: false }
+                  { name: image, label: Image, widget: image }
 
                 ],
             }
