--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -83,7 +83,7 @@ collections:
                   { name: title, label: Title, widget: string },
                   { name: description, label: Description, widget: text },
                   { name: image, label: Image, widget: image }
-
+                  { name: darkBg, label: Dark Background, widget: boolean }
                 ],
             }
           - {
