--- a/package.json
+++ b/package.json
@@ -34,13 +34,16 @@
     "moment": "^2.24.0",
     "netlify-cms": "^2.5.1",
     "node-sass": "^4.11.0",
+    "nuka-carousel": "^4.5.3",
     "prismjs": "^1.15.0",
     "react": "^16.8.3",
+    "react-coverflow": "^0.2.19",
     "react-dom": "^16.8.3",
     "react-headroom": "^2.2.8",
     "react-helmet": "^5.2.0",
     "react-icons": "^3.5.0",
     "react-reveal": "^1.2.2",
+    "react-slick": "^0.23.2",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-less": "^2.4.1",
     "semantic-ui-react": "^0.85.0"
