--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-plugin-react-helmet": "^3.0.8",
     "gatsby-plugin-sass": "^2.0.10",
     "gatsby-plugin-sharp": "^2.0.25",
+    "gatsby-plugin-sitemap": "^2.0.11",
     "gatsby-plugin-slug": "^1.0.1",
     "gatsby-remark-copy-linked-files": "^2.0.9",
     "gatsby-remark-emoji": "0.0.2",
