--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby": "^2.1.19",
     "gatsby-image": "^2.0.35",
     "gatsby-plugin-less": "^2.0.12",
+    "gatsby-plugin-matomo": "^0.7.0",
     "gatsby-plugin-netlify-cms": "^3.0.12",
     "gatsby-plugin-netlify-cms-paths": "^1.2.1",
     "gatsby-plugin-react-helmet": "^3.0.8",
