--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "gatsby": "^2.1.19",
     "gatsby-image": "^2.0.35",
     "gatsby-plugin-less": "^2.0.12",
+    "gatsby-plugin-manifest": "^2.0.26",
     "gatsby-plugin-matomo": "^0.7.0",
     "gatsby-plugin-netlify-cms": "^3.0.12",
     "gatsby-plugin-netlify-cms-paths": "^1.2.1",
+    "gatsby-plugin-offline": "^2.0.25",
     "gatsby-plugin-react-helmet": "^3.0.8",
     "gatsby-plugin-sass": "^2.0.10",
     "gatsby-plugin-sharp": "^2.0.25",
@@ -43,9 +45,7 @@
     "react-dom": "^16.8.3",
     "react-headroom": "^2.2.8",
     "react-helmet": "^5.2.0",
-    "react-icons": "^3.5.0",
     "react-reveal": "^1.2.2",
-    "react-slick": "^0.23.2",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-less": "^2.4.1",
     "semantic-ui-react": "^0.85.0"
