--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "gatsby": "^2.1.3",
     "gatsby-image": "^2.0.35",
+    "gatsby-plugin-favicon": "^3.1.6",
     "gatsby-plugin-less": "^2.0.12",
     "gatsby-plugin-manifest": "^2.0.26",
     "gatsby-plugin-matomo": "^0.7.0",
