--- a/package.json
+++ b/package.json
@@ -45,10 +45,12 @@
     "react-dom": "^16.8.3",
     "react-headroom": "^2.2.8",
     "react-helmet": "^5.2.0",
+    "react-id-swiper": "^2.1.1",
     "react-reveal": "^1.2.2",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-less": "^2.4.1",
-    "semantic-ui-react": "^0.85.0"
+    "semantic-ui-react": "^0.85.0",
+    "swiper": "^4.5.0"
   },
   "devDependencies": {
     "prettier": "^1.16.4"
