--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
     "netlify-cms": "^2.5.1",
     "node-sass": "^4.11.0",
     "nuka-carousel": "^4.5.3",
+    "pigeon-maps": "^0.12.1",
+    "pigeon-marker": "^0.3.4",
+    "pigeon-overlay": "^0.2.3",
     "prismjs": "^1.15.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
