--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -279,7 +279,7 @@ collections:
                             ],
                         },
                         {
-                          name: name,
+                          name: textarea,
                           label: Partie texte,
                           widget: object,
                           fields:
@@ -309,15 +309,17 @@ collections:
                         { name: email, label: Email, widget: string },
                       ],
                   },
-                  {
-                    name: gpsDatas,
-                    label: Coordonnées GPS,
-                    widget: object,
-                    fields:
-                      [
-                        { name: latitude, label: Latitude, widget: string },
-                        { name: longitude, label: Longitude, widget: string },
-                      ],
-                  },
+                  
                 ],
             }
+            - {
+                name: gpsDatas,
+                label: Coordonnées GPS,
+                widget: object,
+                fields:
+                  [
+                    { name: latitude, label: Latitude, widget: string },
+                    { name: longitude, label: Longitude, widget: string },
+                  ],
+              }
+
